--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -31,10 +31,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-body
-{
-	/*background: #fff !important;*/
-}
 
 caption, th, td {
   text-align: left;
@@ -659,7 +655,7 @@ ul.accordion .content {
   text-indent: -1.25em;
 }
 #product-details .features li:before {
-  content: "•";
+  content: "â€¢";
   padding-right: 0.85em;
   color: #00aeef;
 }
@@ -2471,10 +2467,10 @@ select {
 
 /* Header ____________________________________________*/
 header {
-  position: relative;
+  position: relative !important;
 }
 header #header-bar {
-  background-color: #01579c;
+  background-color: #01579c !important;
   /* Old browsers */
   background: url('../img/bgr_header_top.png') repeat-x 0 0, -moz-linear-gradient(top, #01579c, #0c7cce);
   /* FF3.6+ */
@@ -2488,126 +2484,126 @@ header #header-bar {
   /* IE10+ */
   background: url('../img/bgr_header_top.png') repeat-x 0 0, linear-gradient(to bottom, #01579c 0%, #0c7cce 100%);
   /* W3C */
-  border-bottom: solid 1px #3391ec;
-  padding: 0.75em 0.75em 0.5em;
-  text-align: right;
-  position: relative;
-  z-index: 1000;
+  border-bottom: solid 1px #3391ec !important;
+  padding: 0.75em 0.75em 0.5em !important;
+  text-align: right !important;
+  position: relative !important;
+  z-index: 1000 !important;
 }
 header h1#logo {
-  width: 54px;
-  margin: 0;
-  float: left;
+  width: 54px !important;
+  margin: 0 !important;
+  float: left !important;
 }
 header ul {
-  list-style: none;
-  margin: 0.7em 0 0.55em;
+  list-style: none !important;
+  margin: 0.7em 0 0.55em !important;
 }
 header li {
-  display: inline;
-  font-size: 130%;
-  font-weight: bold;
-  margin: 0;
-  padding: 0 0.5em 0 0;
-  text-transform: uppercase;
-  position: relative;
+  display: inline !important;
+  font-size: 130% !important;
+  font-weight: bold !important;
+  margin: 0 !important;
+  padding: 0 0.5em 0 0 !important;
+  text-transform: uppercase !important;
+  position: relative !important;
 }
 header li .nub {
-  width: 36px;
-  height: 20px;
-  position: absolute;
-  left: 0;
-  bottom: -23px;
-  z-index: 1000;
+  width: 36px !important;
+  height: 20px !important;
+  position: absolute !important;
+  left: 0 !important;
+  bottom: -23px !important;
+  z-index: 1000 !important;
   background: url("../img/main-menu-nub.png") no-repeat;
-  opacity: 0;
+  opacity: 0 !important;
 }
 header li .active .nub {
-  -webkit-transition: opacity 0.4s ease-out;
-  -moz-transition: opacity 0.4s ease-out;
-  -o-transition: opacity 0.4s ease-out;
-  transition: opacity 0.4s ease-out;
-  opacity: 1;
+  -webkit-transition: opacity 0.4s ease-out !important;
+  -moz-transition: opacity 0.4s ease-out !important;
+  -o-transition: opacity 0.4s ease-out !important;
+  transition: opacity 0.4s ease-out !important;
+  opacity: 1 !important;
 }
 header li img {
-  margin-top: -5px;
+  margin-top: -5px !important;
 }
 header #search-item .nub {
-  left: -6px;
+  left: -6px !important;
 }
 header #menu-item .nub {
-  width: 100%;
-  background-position: 60% 0;
+  width: 100% !important;
+  background-position: 60% 0 !important;
 }
 header li:last-child {
-  border-left: solid 1px #1c7bcb;
+  border-left: solid 1px #1c7bcb !important;
 }
 header li:last-child a {
-  border-left: solid 1px #043e6c;
-  padding-left: 1em;
+  border-left: solid 1px #043e6c !important;
+  padding-left: 1em !important;
 }
 header #search {
-  text-indent: -9999px;
+  text-indent: -9999px !important;
 }
 header .dropdown-menu {
-  -webkit-box-shadow: inset 0 0 7px #012f53;
-  -moz-box-shadow: inset 0 0 7px #012f53;
-  box-shadow: inset 0 0 7px #012f53;
-  background: #00adef;
-  border-top: solid 1px #0065ad;
-  border-bottom: solid 1px #3391eb;
-  border-left: 0;
-  border-right: 0;
-  z-index: 999;
-  display: none;
+  -webkit-box-shadow: inset 0 0 7px #012f53 !important;
+  -moz-box-shadow: inset 0 0 7px #012f53 !important;
+  box-shadow: inset 0 0 7px #012f53 !important;
+  background: #00adef !important;
+  border-top: solid 1px #0065ad !important;
+  border-bottom: solid 1px #3391eb !important;
+  border-left: 0 !important;
+  border-right: 0 !important;
+  z-index: 999 !important;
+  display: none !important;
 }
 header #category-menu form {
-  border-bottom: solid 1px #0065ad;
+  border-bottom: solid 1px #0065ad !important;
 }
 header #category-menu ul {
-  padding: 0 0.75em;
-  overflow: hidden;
+  padding: 0 0.75em !important;
+  overflow: hidden !important;
 }
 header #category-menu li {
-  display: block;
-  color: #ffffff;
-  border-bottom: solid 1px #1b7ccb;
-  border-top: solid 1px #48d1ff;
-  overflow: hidden;
-  padding: 0.5em;
-  text-transform: none;
-  position: relative;
+  display: block !important;
+  color: #ffffff !important;
+  border-bottom: solid 1px #1b7ccb !important;
+  border-top: solid 1px #48d1ff !important;
+  overflow: hidden !important;
+  padding: 0.5em !important;
+  text-transform: none !important;
+  position: relative !important;
 }
 header #category-menu li:first-child {
-  border-top: 0;
+  border-top: 0 !important;
 }
 header #category-menu li:last-child {
-  border-bottom: 0;
-  border-left: none;
+  border-bottom: 0 !important;
+  border-left: none !important;
 }
 header #category-menu select {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 150%;
-  font-weight: normal;
-  overflow: hidden;
-  padding: 0;
-  text-indent: 0;
-  width: 120%;
-  -webkit-appearance: none;
-  opacity: 0;
+  background: none !important;
+  border: none !important;
+  color: #fff !important;
+  font-size: 150% !important;
+  font-weight: normal !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  text-indent: 0 !important;
+  width: 120% !important;
+  -webkit-appearance: none !important;
+  opacity: 0 !important;
 }
 header #category-menu a, header #category-menu .select-title {
-  font-size: 150%;
-  padding: 0;
-  font-weight: normal;
+  font-size: 150% !important;
+  padding: 0 !important;
+  font-weight: normal !important;
 }
 header #category-menu .select-title {
-  position: absolute;
+  position: absolute !important;
 }
 header #category-menu ul li:last-child a, header #category-menu ul li:last-child .select-title {
-  border-left: none;
+  border-left: none !important;
 }
 
 /* eo header */
@@ -3337,7 +3333,7 @@ footer li {
 .products div.bd div.view-pref input[type='button'] {
   width: 100%;
   height: 42px;
-  /*		    background   : url(../img/spr-view-pref.png) no-repeat 8px 6px;
+  /*            background   : url(../img/spr-view-pref.png) no-repeat 8px 6px;
   */
   background: url(../img/spr-view-pref.png) no-repeat 6px 8px;
   background-size: 85%;
@@ -3384,6 +3380,16 @@ footer li {
 }
 div.ultrabook.content
 {
-	background: #fff;
+    background: #fff;
 }
 /* eo .products */
+
+/* added by Shishir */
+.ultrabook .slide .item .inside .head h2 p
+{
+    color: #0061A5;
+}
+.ultrabook .slide-z .item .inside .laptop
+{
+    text-align: center;
+}
