--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.h.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.h.css
@@ -51,16 +51,16 @@
 }
 .ultrabook .slide-0 .item .inside .head 
 {
-	position:absolute !important;top:0 !important;left:0 !important;width:100% !important;
-	padding-top: 25px !important;
-	padding-left:25px !important;
+    position:absolute !important;top:0 !important;left:0 !important;width:70%;
+    padding-top: 25px !important;
+    padding-left:25px !important;
 }
 .ultrabook .slide-0 {
   /*background-image: url("/etc/designs/intelmobile/img/ultrabook/960h/slide.0.jpg");*/
 }
 .ultrabook .inside_image
 {
-	position:relative;width:100%;
+    position:relative;width:100%;
 }
 .ultrabook .space-1 {
  /* background-image: url("/etc/designs/intelmobile/img/ultrabook/960h/space.1.jpg");*/
