--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
@@ -45,7 +45,7 @@
 body,
 html {
   background-color: #ffffff;
-  font-family: neo-sans-intel;
+  font-family: neo-sans-intel !important;
 }
 body {
   min-width: 320px;
@@ -367,13 +367,13 @@ p {
 }
 .ultrabook .slide-0 .item .inside
 {
-	padding: 0px !important;
+    padding: 0px !important;
 }
 .ultrabook .slide-0 .item .inside .head 
 {
-	position:absolute !important;top:0 !important;left:0 !important;width:100% !important;
-	padding-top: 25px !important;
-	padding-left: 25px !important;
+    position:absolute !important;top:0 !important;left:0 !important;width:80% !important;
+    padding-top: 25px !important;
+    padding-left: 25px !important;
 }
 .ultrabook .slide-1 .item .inside .icon {
   /*background-image: url("/etc/designs/intelmobile/img/ultrabook/640v/slide.1.icon.png");*/
