UI fix for social media
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@1888 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -63,3 +63,35 @@ html.csstransforms3d header.ics404 #search-menu {
 {
     text-align: center;
 }
+
+ #social-share {
+  text-align: center;
+  /*padding: 1em 0 0 0;*/ 
+  margin-top: 1em;
+  /*overflow: hidden;*/
+  
+}
+
+ #social-share span {
+  display: inline-block;
+  /*height: 22px;*/
+ /* top:-4px */ /* added by Shishir */
+ float: left;
+}
+ #social-share .st_sharethis_custom {
+  background: url(/etc/designs/intelmobile/img/btn-share.png) no-repeat;
+  width: 58px;
+  background-size: 100%;
+  position: relative;
+  top: 0px; /* changed by shishir */
+  height: 22px;
+}
+ #social-share .social-share-align
+{
+    margin: 0 auto;
+  width: 278px;
+}
+.ultrabook .slide
+{
+	clear: both;
+}
