changed by shishir
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@1928 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -4,6 +4,19 @@
 {
     color: #0061A5 !important;
 }
+.ultrabook.content a:hover,a:visited
+{
+    color: #0061A5 !important;
+}
+.more a
+{
+   color: #0061A5 !important; 
+}
+.more p a
+{
+   color: #0061A5 !important; 
+}
+
 header #header-bar
 {
     font-family: Arial,Helvetica,sans-serif;
