changed by shishir
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@1942 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -154,3 +154,11 @@ html.csstransforms3d header.ics404 #search-menu {
     float: left;
     height: 40px;
 }
+.legal a:visited
+{
+    color: #0061A5 !important;
+}
+.legal p a:visited
+{
+    color: #0061A5 !important;
+}
