changes for image height and spacing
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2027 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.480h.less
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.480h.less
@@ -1,9 +1,16 @@
+@slideheight: 477px*(953/960);
+
 .ultrabook
 {
 	.slide-0
 	{
-		height:477px;
+		height: @slideheight;
+		background-position: center -40px;
 
+	}
+
+	.slide-2 {
+		margin-top: -40px;
 	}
 
 	.space-1
