--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.800h.less
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.800h.less
@@ -1,9 +1,16 @@
+@slideheight: 795px*(953/960);
+
 .ultrabook
 {
 	.slide-0
 	{
-		height:795px;
+		height: @slideheight;
+		background-position: center -140px;
 
+	}
+
+	.slide-2 {
+		margin-top: -140px;
 	}
 
 	.space-1
