--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.less
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.less
@@ -374,13 +374,16 @@ h1,h2,h3,h4,h5,h6,p
 
 					}
 
-					h2
-					{
+					h2 {
 						font-size:21px;
 						font-weight:300;
 						line-height:130%;
 						color:#0061A5;
+					}
 
+					h2.super {
+						font-size:14px;
+						color: #0097e0;
 					}
 
 				}
