--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -3521,14 +3521,20 @@ html.csstransforms3d header:not(.ics404) .dropdown-menu.inited {
   padding: 0.75em 2.5em 0.75em 1.5em;
   color: #fff;
 }
-#disclaimers .expand {
-  background: transparent url("/etc/designs/intelmobile/img/icon_FOOTER-disclaimer.png") right 0.6em no-repeat;
-  background-size: 25%;
+/* changed by shishir classname from expand to expand_btn */
+#disclaimers .expand_btn {
+  background: transparent url("/etc/designs/intelmobile/img/icon_FOOTER-disclaimer.png") no-repeat;
+  background-size: 78%;
   padding-right: 2.5em;
 }
-#disclaimers .expand.open {
+#disclaimers .expand_btn.open {
+  background-position: left -3.7em;
+  /* original changed by shishir
   background-position: right -3.7em;
+  */
+  
 }
+/* changed by shishir classname from expand to expand_btn End*/
 #disclaimers #disclaimer-content {
   width: 100%;
   position: relative;
