changes for S3 spacing
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2039 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.360v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.360v.css
@@ -1,4 +1,9 @@
 .ultrabook .slide-0{height:566px;}
+.ultrabook .slide-0 .camp_headerimg.s3_orig img
+{
+	margin-top: -30px !important;
+	
+} 
 .ultrabook .space-1{height:350px;}
 .ultrabook .space-2{height:350px;}
 .ultrabook .space-3{height:350px;}
