--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.533h.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.533h.css
@@ -7,6 +7,12 @@
 {
 	margin-top: -65px;
 }
+/*
+.ultrabook .slide-0 .camp_headerimg.s3_orig img
+{
+	margin-top: -65px !important;
+}
+*/
 .ultrabook .slide-2 {
   /*margin-top: -65px;*/
 }
