--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.640h.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.640h.css
@@ -7,6 +7,10 @@
 {
 	margin-top: -120px;
 }
+.ultrabook .slide-0 .camp_headerimg.s3_orig img
+{
+	margin-top: -132px !important;
+}
 .ultrabook .slide-2 {
   /*margin-top: -120px;*/
 }
