changes for S2 and blackberry spacing
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2043 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -220,6 +220,14 @@ footer nav a:visited
   {
       padding-right: 15px !important;
   }
+  .ultrabook .slide-0 .camp_headerimg.s2_space img
+  {
+      margin-top: -130px !important;
+  }
+  .ultrabook .slide-0 .camp_headerimg.bb_space img
+  {
+      margin-top: -40px !important;
+  }
   
 }
 
