new class added for Portrait mode fix for Menu Text if long
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2046 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -1540,6 +1540,7 @@ ul.accordion li {
   #main .questions .bd ul li a {
     font-size: 120%;
   }
+  
 }
 /* #language-selector */
 #language-selector {
@@ -2133,6 +2134,7 @@ and (max-device-width : 480px) {
   .tiles div span + span {
     font-size: 89%;
   }
+  
 }
 /* Smartphones (Landscape 480 px) ___________________________________*/
 @media only screen 
@@ -4368,4 +4370,12 @@ html.csstransforms3d header.ics404 #search-menu {
 .design_auth
 {
     width: 300px !important;
+}
+
+@media only screen and (max-width: 380px) {
+#category-menu .select-title.menu_set
+  {
+	line-height: 23px;
+	top: 0px;
+ }
 }
