Changed for Tiles <sup>
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2056 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -2095,8 +2095,8 @@ div.filter ul.level2 li label {
 }
 .tiles sup {
   line-height: 0;
-  font-size: 104%;
-  vertical-align: bottom;
+  /*font-size: 104%;*/ /* changed by shishir 23-10-12*/
+ /* vertical-align: bottom;*/ /* changed by shishir 23-10-12*/
 }
 .tiles a {
   text-decoration: none;
