git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2057 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
@@ -92,6 +92,9 @@ p {
 .ultrabook a {
   color: #0061A5 ;
 }
+.ultrabook.menus a{
+  color: #0061A5 !important;
+}
 .ultrabook a:hover {
   /*color: #000;*/
 }
