git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2069 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -137,7 +137,10 @@ html.csstransforms3d header.ics404 #search-menu {
  #social-share .social-share-align
 {
     margin: 0 auto;
-  width: 250px; /* changed from 278px */
+  /*width: 250px;*/ /* changed from 278px */
+  display: inline-block;
+  
+  
 }
 .ultrabook .slide
 {
