Changes for Compare Product Static Image
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2071 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -4380,3 +4380,20 @@ html.csstransforms3d header.ics404 #search-menu {
     top: 0px;
  }
 }
+
+.compareImg
+{
+	background: white url(/etc/designs/intelmobile/img/img_COMPARE-add-item.jpg) no-repeat;
+	width: 302px;
+	height: 288px;
+}
+.Comparetxt
+{
+	display: inline-block;
+    font-size: 150%;
+    left: 0;
+    padding-top: 15%;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
