--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -3527,7 +3527,8 @@ html.csstransforms3d header:not(.ics404) .dropdown-menu.inited {
 /* changed by shishir classname from expand to expand_btn */
 #disclaimers .expand_btn {
   background: transparent url("/etc/designs/intelmobile/img/icon_FOOTER-disclaimer.png") no-repeat;
-  background-size: 75%;
+  /*background-size: 75%;*/
+  background-size: 24px;
   padding-right: 2.5em;
 }
 #disclaimers .expand_btn.open {
