change for Ultrabook Shop Button
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2087 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.h.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.h.css
@@ -89,3 +89,11 @@
 .ultrabook .body > p {
   width: 200px;
 }
+
+.ultrabook .shop a span.WrapNew {
+padding-top: 0px !important;
+}
+
+.ultrabook .slide-z .shop a span.WrapLast {
+padding-top: 8px !important;
+}
