--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
@@ -222,6 +222,7 @@ p {
   padding-bottom: 14px;
   padding-top: 8px;
   display: inline-block;
+  width: 84%;
 }
 .ultrabook .slide {
   background-repeat: no-repeat;
