git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2120 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
@@ -311,9 +311,13 @@ p {
   
   
 }
+.ultrabook .slide .item .inside .body div.ru_style p
+{
+    font-weight: 300 !important;
+}
 .ultrabook .slide .item .inside .body p {
   font-size: 15px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 150%;
   color: #0097E0;
   margin-bottom: 10px;
