Fix of defect IM-16
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2128 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -1601,7 +1601,7 @@ ul.accordion li {
   height: 0;
   overflow: hidden;
 }
-#language-selector .bd ul li.default a {
+#language-selector .bd ul li.default1 a {
   color: #999;
   background-image: url(/etc/designs/intelmobile/img/icon_LANG-check-mark.png);
 }
