--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/styles.v.css
@@ -2,21 +2,21 @@
 @font-face {
   font-weight: 300;
   font-style: normal;
-  font-family: neo-sans-intel;
+  /*font-family: neo-sans-intel;*/
   src: url("../fonts/neo-sans-intel-light.eot");
   src: url("../fonts/neo-sans-intel-light.eot?#msies") format("embedded-opentype"), url("../fonts/neo-sans-intel-light.woff") format("woff"), url("../fonts/neo-sans-intel-light.ttf") format("truetype"), url("../fonts/neo-sans-intel-light.svg") format("svg");
 }
 @font-face {
   font-weight: 300;
   font-style: italic;
-  font-family: neo-sans-intel;
+  /*font-family: neo-sans-intel;*/
   src: url("../fonts/neo-sans-intel-light-italic.eot");
   src: url("../fonts/neo-sans-intel-light-italic.eot?#msies") format("embedded-opentype"), url("../fonts/neo-sans-intel-light-italic.woff") format("woff"), url("../fonts/neo-sans-intel-light-italic.ttf") format("truetype"), url("../fonts/neo-sans-intel-light-italic.svg") format("svg");
 }
 @font-face {
   font-weight: 400;
   font-style: normal;
-  font-family: neo-sans-intel;
+  /*font-family: neo-sans-intel;*/
   src: url("../fonts/neo-sans-intel.eot");
   src: url("../fonts/neo-sans-intel.eot?#msies") format("embedded-opentype"), url("../fonts/neo-sans-intel.woff") format("woff"), url("../fonts/neo-sans-intel.ttf") format("truetype"), url("../fonts/neo-sans-intel.svg") format("svg");
 }
@@ -30,21 +30,21 @@
 @font-face {
   font-weight: 500;
   font-style: normal;
-  font-family: neo-sans-intel;
+  /*font-family: neo-sans-intel;*/
   src: url("../fonts/neo-sans-intel-medium.eot");
   src: url("../fonts/neo-sans-intel-medium.eot?#msies") format("embedded-opentype"), url("../fonts/neo-sans-intel-medium.woff") format("woff"), url("../fonts/neo-sans-intel-medium.ttf") format("truetype"), url("../fonts/neo-sans-intel-medium.svg") format("svg");
 }
 @font-face {
   font-weight: 500;
   font-style: italic;
-  font-family: neo-sans-intel;
+  /*font-family: neo-sans-intel;*/
   src: url("../fonts/neo-sans-intel-medium-italic.eot");
   src: url("../fonts/neo-sans-intel-medium-italic.eot?#msies") format("embedded-opentype"), url("../fonts/neo-sans-intel-medium-italic.woff") format("woff"), url("../fonts/neo-sans-intel-medium-italic.ttf") format("truetype"), url("../fonts/neo-sans-intel-medium-italic.svg") format("svg");
 }
 /* Main */
 body, html {
   background-color: #ffffff;
-  font-family: neo-sans-intel !important;
+  /*font-family: neo-sans-intel !important;*/
 }
 body {
   min-width: 320px;
@@ -305,15 +305,8 @@ p {
   margin-bottom: 10px;
 }
 .ultrabook .slide .item .inside .body h3.ru_style {
-  
+  font-size: 19px;
   font-weight: 300 !important;
-  
-  
-  
-}
-.ultrabook .slide .item .inside .body div.ru_style p
-{
-    font-weight: 300 !important;
 }
 .ultrabook .slide .item .inside .body p {
   font-size: 15px;
@@ -322,6 +315,10 @@ p {
   color: #0097E0;
   margin-bottom: 10px;
 }
+.ultrabook .slide .item .inside .body div.ru_style p{
+  font-weight: 300 !important;
+}
+
 .ultrabook .slide .item .inside .body .more {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -333,6 +330,9 @@ p {
   line-height: 130%;
   color: #0061A5;
 }
+.ultrabook .slide .item .inside .body .more h4.ru_style {
+  font-weight: 200 !important;
+}
 .ultrabook .slide .item .inside .body .more hr {
   background: #0061A5;
   border: 0;
@@ -340,6 +340,23 @@ p {
 .ultrabook .slide .item .inside .body .learn {
   font-size: 15px;
   font-weight: 500;
+  line-height: 130%;
+  color: #0061A5;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-image: url("/etc/designs/intelmobile/img/ultrabook/640v/slide.o.more.png");
+  background-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-right: 20px;
+  display: inline-block;
+  cursor: pointer;
+
+  
+}
+.ultrabook .slide .item .inside .body .learn_ru_style {
+  font-size: 15px;
+  font-weight: 300 !important;
   line-height: 130%;
   color: #0061A5;
   background-repeat: no-repeat;
@@ -476,3 +493,16 @@ p {
 .ultrabook .portrait {
   display: block !important;
 }
+.engWord
+{
+    font-weight:400 !important;
+}
+
+.ru_headstyle
+{
+    padding-top: 0px !important;
+    padding-left:56px !important;
+    margin-top: -60px;
+ 
+}
+
