git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2145 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -231,7 +231,10 @@ footer nav a:visited
   {
       margin-top: -40px !important;
   }
-  
+  .learn_ru
+{
+    width: 100px;
+}
 }
 
 .ultrabook .slide .item .inside .head h3
