--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -2178,7 +2178,6 @@ and (max-width : 320px) {
     width: 97.5%;
   }
 }
-
 /* Smartphones (Landscape 530 px) ___________________________________*/
 @media only screen 
 and (min-device-width : 960px) 
@@ -2194,9 +2193,9 @@ and (max-device-width : 961px) {
     }
   
 }
-
 /* Smartphones (Landscape 530 px) ___________________________________*/
 @media only screen 
+and (orientation : portrait)
 and (max-width : 540px)
  {
   .tiles li,
@@ -2225,9 +2224,6 @@ and (max-width : 580px) {
     
   }
 }
-
-
-
 /* Smartphones (Landscape 640 px) ___________________________________*/
 @media only screen 
 and (min-device-width : 640px) 
@@ -3367,8 +3363,6 @@ html.csstransforms3d header:not(.ics404) .dropdown-menu.inited {
   /*padding: 1em 0 0 0;*/ 
   margin-top: 1em;
   /*overflow: hidden;*/
-  margin-left: -12px;
-  width: 100%;
   
 }
 #main #social-share span {
@@ -3580,9 +3574,9 @@ html.csstransforms3d header:not(.ics404) .dropdown-menu.inited {
 /* changed by shishir classname from expand to expand_btn */
 #disclaimers .expand_btn {
   background: transparent url("/etc/designs/intelmobile/img/icon_FOOTER-disclaimer.png") no-repeat;
-  background-size: 75%;
- /* background-size: 24px;*/
-   padding-right: 2.5em;
+  /*background-size: 75%;*/
+  background-size: 24px;
+  padding-right: 2.5em;
 }
 #disclaimers .expand_btn.open {
   background-position: left -3.5em;
@@ -3598,7 +3592,7 @@ html.csstransforms3d header:not(.ics404) .dropdown-menu.inited {
   overflow: auto;
   display: none;
   /* added by shishir */
-    white-space: pre;           /* CSS 2.0 */
+  white-space: pre;           /* CSS 2.0 */
     white-space: pre-wrap;      /* CSS 2.1 */
     white-space: pre-line;      /* CSS 3.0 */
     white-space: -pre-wrap;     /* Opera 4-6 */
