added code for rte bullets issue
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2203 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/static.css
@@ -4603,3 +4603,10 @@ html.csstransforms3d header.ics404 #search-menu {
 	margin-top:-4px;
 }
 /* For Email Template End*/
+
+/* fro rte text UL LI - IM-38 */
+
+.rte_text ul, .rte_text li {
+    list-style: disc inside none;
+    text-indent: 15px;
+}
