added style foe ultrabook ul li
git-svn-id: https://del.sapient.resultspace.com/scm/intelmobile/branches/intelmobile_postprod@2238 d56a3af8-c092-443f-9987-f536df04eac3

--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/ultrabook/intel.mobile.css
@@ -52,10 +52,16 @@ div.ultrabook.content
 {
     background: #fff;
 }
+.ultrabook .slide .item .inside .head h2 p, .ultrabook .slide .item .inside .head h2 ul li
+{
+	 color: #0061A5;
+}
+/*
 .ultrabook .slide .item .inside .head h2 p
 {
     color: #0061A5;
 }
+*/
 .ultrabook .slide-z .item .inside .laptop
 {
     text-align: center;
