--- a/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/decision/shop_spot.css
+++ b/ui/src/main/content/jcr_root/etc/designs/intelmobile/appclientlibs/css/decision/shop_spot.css
@@ -77,6 +77,42 @@
 }
 
 .shop-spot-landing .shop-spot-content-container {
-	width: 320px;
+width: 320px;
+	
 	margin: 0 auto;
+}
+
+.shop-spot-landing .shop-spot-product .img-box
+{
+	/*background-image: url('/etc/designs/intelmobile/img/decision/image-box.png');*/
+	
+	 background: -moz-linear-gradient(top, #fff 0%, #c5c6c8 3%, #f6f6f6 63%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(7%, #fff), color-stop(63%, #f6f6f6));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #fff 0%, #c5c6c8 3%, #f6f6f6 63%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #fff 0%, #c5c6c8 3%, #f6f6f6 63%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #fff 0%, #c5c6c8 3%, #f6f6f6 63%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #fff 0%, #c5c6c8 3%, #f6f6f6 63%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c5c6c8', endColorstr='#f6f6f6',GradientType=0 );
+  /* IE6-8 */
+	
+	/*width:95px;*/
+	min-height:30px;
+	margin-left:5px;
+	text-align:center;
+	color: #2987cc;
+	font-weight: bold;
+}
+.shop-spot-landing .shop-spot-product .img-desc
+{
+	color: #7b7d81;
+	font-size:10px;
+	margin-top:5px;
+	text-align: center;
+	margin-left:5px;
 }
